fixed padding issue on mobile for dashboard wrapper & added personalised text in the chrome tab

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -19,5 +19,6 @@
 
   @media (max-width: 900px) {
     grid-template-columns: 1fr;
+    gap: 1rem;
   }
 }
